Wed Nov 12 14:09:43 2003  Shugo Maeda  <shugo@ruby-lang.org>

	* test/monitor/test_monitor.rb: fix the timing problem by Queue.

Wed Nov 12 12:59:44 2003  Shugo Maeda  <shugo@ruby-lang.org>

	* test/monitor/test_monitor.rb: added.

Wed Nov 12 10:14:28 2003  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/monitor.rb: refactored. Thanks, Gennady Bystritsky.

Wed Nov 12 06:11:39 2003  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/ossl.c (ossl_x509_sk2ary, ossl_x509crl_sk2ary): 
	  add functions to convert STACK into Array.

	* ext/openssl/ossl.h: add prototypes.

	* ext/openssl/ossl_pkcs7.c (ossl_pkcs7_set_certificates, 
	  ossl_pkcs7_get_certificates, ossl_pkcs7_get_crls,
	  ossl_pkcs7_set_crls): add functions for PKCS7#certificates=
	  PKCS7#certificates, PKCS7#crls= and PKCS7#crls. 

Tue Nov 12 00:47:00 2003  Nathaniel Talbott  <ntalbott@ruby-lang.org>

	* lib/test/unit/ui/testrunnermediator.rb: should require 'test/unit'.

Tue Nov 11 23:54:00 2003  Nathaniel Talbott  <ntalbott@ruby-lang.org>

	* lib/test/unit/ui/gtk/testrunner.rb: added a rescue clause to handle
	  the case when the requested font is not available.

Tue Nov 11 22:44:08 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (appendline): file may not end with newline.  a bug if
	  READ_DATA_PENDING_PTR is defined. [ruby-talk:84925]

Tue Nov 11 10:42:41 2003  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: raise an exception when creating TkWindow
	  object, because TkWindow class is an abstract class.

Tue Nov 11 03:30:43 2003  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/ext/openssl/ossl_conf.c (ossl_config_get_value): return nil
	  if the specified value doesn't exist.

	* lib/ext/openssl/ossl_conf.c (ossl_config_get_section): return
	  a empty hash if the specified section doesn't exist.

Mon Nov 10 11:40:29 2003  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/monitor.rb (wait): return true on signal/broadcastfalse and
	false on timeout. Thanks Gennady Bystritsky.
